--- a/tutorial_5_window/.vscode/settings.json
+++ b/tutorial_5_window/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "__config": "cpp",
-        "__nullptr": "cpp"
+        "__nullptr": "cpp",
+        "stdexcept": "cpp",
+        "functional": "cpp"
     }
 }
