Tutorial 6: Sierpinski Triangle
-Refactored FirstApp for Template Method Pattern for easy reuse.
-Added Iterative based algorithm to generate Sierpinski triangle.

--- a/tutorial_6_window/.vscode/settings.json
+++ b/tutorial_6_window/.vscode/settings.json
@@ -82,5 +82,6 @@
         "memory_resource": "cpp",
         "stop_token": "cpp",
         "filesystem": "cpp"
-    }
+    },
+    "remote.SSH.connectTimeout": 60
 }
